<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_panel"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menuwallpaper"
    android:orientation="vertical" >

    <Button
        android:id="@+id/menu_button_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu_button_build"
        android:layout_alignLeft="@+id/menu_button_build"
        android:background="@drawable/menubutton"
        android:onClick="joinGame"
        android:text="@string/join_game"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <Button
        android:id="@+id/menu_button_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/menu_button_join"
        android:layout_alignLeft="@+id/menu_button_join"
        android:background="@drawable/menubutton"
        android:onClick="newGame"
        android:text="@string/new_game"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <Button
        android:id="@+id/menu_button_build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:background="@drawable/menubutton"
        android:onClick="buildCar"
        android:text="@string/build_car"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/game_name"
        android:src="@drawable/mapname" />

    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/game_name"
        android:textColorHint="@android:color/black" />

</RelativeLayout>