<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_panel"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menuwallpaper"
    android:orientation="vertical"
    android:padding="5dp" >

    <Button
        android:id="@+id/back_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/back"
        android:onClick="back" />

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back_button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:background="@drawable/menubutton"
        android:onClick="playGame"
        android:text="@string/play"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/created_maps"
        android:layout_width="200dp"
        android:layout_height="fill_parent"
        android:layout_above="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/choose_one_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/choose_one_map"
            android:textColor="@android:color/darker_gray"
            android:textSize="22sp" />

        <ScrollView
            android:id="@+id/created_maps_scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TableLayout
                android:id="@+id/created_maps_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </TableLayout>
        </ScrollView>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_above="@+id/play_button"
        android:layout_alignRight="@+id/created_maps"
        android:layout_marginBottom="14dp"
        android:background="@android:drawable/btn_dropdown"
        tools:listitem="@android:layout/simple_spinner_dropdown_item" />

    <TextView
        android:id="@+id/write_count_players"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/created_maps"
        android:layout_alignTop="@+id/spinner"
        android:gravity="center_vertical"
        android:text="@string/write_count_players"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp" />

</RelativeLayout>